bin/tests/errors/sema/sema_err_literal_too_big.swg
#global fileprivate

var J: [0xFFFFFFFF_FFFFFFFF_FFF] bool // swc-expected-error {{sema_err_literal_too_big}}
